// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autosuggest @click and @selected listener events works as expected 1`] = `
<div id="autosuggest"> <input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="false" aria-expanded="false" id="autosuggest__input" placeholder="Type 'G'" value="clifford kits">
  <div class="autosuggest__results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can click outside document to trigger close 1`] = `
<div id="autosuggest"> <input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="false" aria-expanded="false" id="autosuggest__input" placeholder="Type 'G'" value="G">
  <div class="autosuggest__results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can customize ids and classes for container divs 1`] = `
<div id="automatischsuchen" class="containerz"> <input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="false" aria-expanded="false" id="autosuggest__input" placeholder="Type 'G'">
  <div class="resultz-containerz">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can display section header 1`] = `
<div id="autosuggest"> <input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="true" aria-expanded="true" id="autosuggest__input" placeholder="Type 'G'" value="G" class="autosuggest__input-open">
  <div class="autosuggest__results-container">
    <div aria-labelledby="autosuggest" class="autosuggest__results">
      <div role="listbox" aria-labelledby="autosuggest" class="autosuggest__result -default">
        <h3 class="autosuggest__result_title -default">Suggestions</h3>
        <div class="autosuggest__result_wrapper">
          <div role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest__result_item-0" class="autosuggest__result_item">
            clifford kits
          </div>
          <div role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest__result_item-1" class="autosuggest__result_item">
            friendly chemistry
          </div>
          <div role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest__result_item-2" class="autosuggest__result_item">
            phonics
          </div>
          <div role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest__result_item-3" class="autosuggest__result_item">
            life of fred
          </div>
          <div role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest__result_item-4" class="autosuggest__result_item">
            life of fred math
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autosuggest can mount 1`] = `
<div id="autosuggest"> <input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="false" aria-expanded="false" id="autosuggest__input" placeholder="Type 'G'" value="q">
  <div class="autosuggest__results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can render default suggestion value by property name 1`] = `
<div id="autosuggest"> <input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="false" aria-expanded="false" id="autosuggest__input" placeholder="Type 'G'" value="Frodo" class="cool-class">
  <div class="autosuggest__results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can render simplest component with single onSelected 1`] = `
<div id="autosuggest"> <input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="true" aria-expanded="true" id="autosuggest__input" placeholder="Type 'G'" value="phonics" class="autosuggest__input-open cool-class">
  <div class="autosuggest__results-container">
    <div aria-labelledby="autosuggest" class="autosuggest__results">
      <div role="listbox" aria-labelledby="autosuggest" class="autosuggest__result -default">
        <div class="autosuggest__result_wrapper">
          <div role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest__result_item-0" class="autosuggest__result_item">
            clifford kits
          </div>
          <div role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest__result_item-1" class="autosuggest__result_item">
            friendly chemistry
          </div>
          <div role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest__result_item-2" class="autosuggest__result_item">
            phonics
          </div>
          <div role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest__result_item-3" class="autosuggest__result_item">
            life of fred
          </div>
          <div role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest__result_item-4" class="autosuggest__result_item">
            life of fred math
          </div>
          <div role="option" data-suggestion-index="5" data-section-name="default" id="autosuggest__result_item-5" class="autosuggest__result_item">
            magic school bus
          </div>
          <div role="option" data-suggestion-index="6" data-section-name="default" id="autosuggest__result_item-6" class="autosuggest__result_item">
            math mammoth light blue
          </div>
          <div role="option" data-suggestion-index="7" data-section-name="default" id="autosuggest__result_item-7" class="autosuggest__result_item">
            handwriting
          </div>
          <div role="option" data-suggestion-index="8" data-section-name="default" id="autosuggest__result_item-8" class="autosuggest__result_item">
            math
          </div>
          <div role="option" data-suggestion-index="9" data-section-name="default" id="autosuggest__result_item-9" class="autosuggest__result_item">
            minecraft
          </div>
          <div role="option" data-suggestion-index="10" data-section-name="default" id="autosuggest__result_item-10" class="autosuggest__result_item">
            free worksheets
          </div>
          <div role="option" data-suggestion-index="11" data-section-name="default" id="autosuggest__result_item-11" class="autosuggest__result_item">
            4th grade
          </div>
          <div role="option" data-suggestion-index="12" data-section-name="default" id="autosuggest__result_item-12" class="autosuggest__result_item">
            snap circuits
          </div>
          <div role="option" data-suggestion-index="13" data-section-name="default" id="autosuggest__result_item-13" class="autosuggest__result_item">
            bath toys
          </div>
          <div role="option" data-suggestion-index="14" data-section-name="default" id="autosuggest__result_item-14" class="autosuggest__result_item">
            channies
          </div>
          <div role="option" data-suggestion-index="15" data-section-name="default" id="autosuggest__result_item-15" class="autosuggest__result_item">
            fred
          </div>
          <div role="option" data-suggestion-index="16" data-section-name="default" id="autosuggest__result_item-16" class="autosuggest__result_item">
            lego
          </div>
          <div role="option" data-suggestion-index="17" data-section-name="default" id="autosuggest__result_item-17" class="autosuggest__result_item">
            math life of fred
          </div>
          <div role="option" data-suggestion-index="18" data-section-name="default" id="autosuggest__result_item-18" class="autosuggest__result_item">
            multiplication
          </div>
          <div role="option" data-suggestion-index="19" data-section-name="default" id="autosuggest__result_item-19" class="autosuggest__result_item">
            thinking tree
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autosuggest can render slots 1`] = `
<div id="autosuggest">
  <div class="header-dude"></div> <input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="true" aria-expanded="true" id="autosuggest__input" placeholder="Type 'G'" value="G" class="autosuggest__input-open">
  <div class="autosuggest__results-container">
    <div aria-labelledby="autosuggest" class="autosuggest__results">
      <div id="footer-dude"><span>1</span><span>2</span></div>
      <div role="listbox" aria-labelledby="autosuggest" class="autosuggest__result -default">
        <div class="autosuggest__result_wrapper">
          <div role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest__result_item-0" class="autosuggest__result_item">
            <h1>clifford kits</h1>
          </div>
          <div role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest__result_item-1" class="autosuggest__result_item">
            <h1>friendly chemistry</h1>
          </div>
          <div role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest__result_item-2" class="autosuggest__result_item">
            <h1>phonics</h1>
          </div>
          <div role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest__result_item-3" class="autosuggest__result_item">
            <h1>life of fred</h1>
          </div>
          <div role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest__result_item-4" class="autosuggest__result_item">
            <h1>life of fred math</h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autosuggest can render suggestions 1`] = `
<div id="autosuggest"> <input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="autosuggest__result_item-0" aria-haspopup="true" aria-expanded="true" id="autosuggest__input" placeholder="Type 'G'" value="clifford kits" class="autosuggest__input-open">
  <div class="autosuggest__results-container">
    <div aria-labelledby="autosuggest" class="autosuggest__results">
      <div role="listbox" aria-labelledby="autosuggest" class="autosuggest__result -default">
        <div class="autosuggest__result_wrapper">
          <div role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest__result_item-0" class="autosuggest__result_item-highlighted autosuggest__result_item">
            clifford kits
          </div>
          <div role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest__result_item-1" class="autosuggest__result_item">
            friendly chemistry
          </div>
          <div role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest__result_item-2" class="autosuggest__result_item">
            phonics
          </div>
          <div role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest__result_item-3" class="autosuggest__result_item">
            life of fred
          </div>
          <div role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest__result_item-4" class="autosuggest__result_item">
            life of fred math
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autosuggest can select from suggestions using keystroke 1`] = `
<div id="autosuggest"> <input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="false" aria-expanded="false" id="autosuggest__input" placeholder="Type 'G'" value="G">
  <div class="autosuggest__results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest can use escape key to exit 1`] = `
<div id="autosuggest"> <input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="" aria-haspopup="false" aria-expanded="false" id="autosuggest__input" placeholder="Type 'G'" value="G">
  <div class="autosuggest__results-container">
    <!---->
  </div>
</div>
`;

exports[`Autosuggest is aria complete 1`] = `
<div id="autosuggest"> <input type="text" autocomplete="off" role="combobox" aria-autocomplete="list" aria-owns="autosuggest__results" aria-activedescendant="autosuggest__result_item-2" aria-haspopup="true" aria-expanded="true" id="autosuggest__input" placeholder="Type 'G'" value="phonics" class="autosuggest__input-open">
  <div class="autosuggest__results-container">
    <div aria-labelledby="autosuggest" class="autosuggest__results">
      <div role="listbox" aria-labelledby="autosuggest" class="autosuggest__result -default">
        <div class="autosuggest__result_wrapper">
          <div role="option" data-suggestion-index="0" data-section-name="default" id="autosuggest__result_item-0" class="autosuggest__result_item">
            clifford kits
          </div>
          <div role="option" data-suggestion-index="1" data-section-name="default" id="autosuggest__result_item-1" class="autosuggest__result_item">
            friendly chemistry
          </div>
          <div role="option" data-suggestion-index="2" data-section-name="default" id="autosuggest__result_item-2" class="autosuggest__result_item-highlighted autosuggest__result_item">
            phonics
          </div>
          <div role="option" data-suggestion-index="3" data-section-name="default" id="autosuggest__result_item-3" class="autosuggest__result_item">
            life of fred
          </div>
          <div role="option" data-suggestion-index="4" data-section-name="default" id="autosuggest__result_item-4" class="autosuggest__result_item">
            life of fred math
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
